# AerolineasRusticas

./: Makefile  Readme.md  Rearme.md
cassandra_node/: Cargo.toml
cassandra_node/src/: consistency.rs  consistent_hashing.rs  data_parser.rs  handler_nodes.rs  internal_protocol.rs  lock_test.rs  log.rs  main.rs  native_protocol.rs  node.rs  query_builder.rs  replication_strategy.rs
cassandra_node/src/encrypted_table/: mod.rs  serde_table.rs  table.rs
cassandra_node/src/query_parser/: custom_error.rs  expression.rs  expression_parser.rs  mod.rs  tokenizer.rs
common/: Cargo.toml
common/src/: config.rs  lib.rs
common/src/client_manager/: auth.rs  mod.rs
common/src/frame/: client_handle.rs  mod.rs  server_handle.rs  version.rs
common/src/frame/messages/: authentication.rs  consistency_level.rs  error.rs  mod.rs  notation.rs  query.rs  startup_options.rs
common/src/frame/messages/query_result/: mod.rs  row.rs
common/src/frame/messages/query_result/metadata/: mod.rs  spec.rs
common/src/frame/messages/query_result/metadata/option/: mod.rs  udt.rs
common/src/models/: airplane.rs  airport.rs  mod.rs  status.rs
common/src/models/tracking_data/: mod.rs  mode.rs
common/src/security/: base_encryption_functions.rs  mod.rs
rustic_airlines/: Cargo.toml
