[package]
name = "cassandra_node"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "cassandra_node"
path = "src/main.rs"

[dependencies]
common = { path = "../common" }
rand = "0.9.0-alpha.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.132"
chrono = { version = "0.4.38", features = ["serde"] }
dotenv = "0.15.0"